Use classes for board and robot

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <body>
+
   <div style="text-align:center; margin-bottom: 20px">
     <label for="firstMove">Game starts:</label>
 
@@ -57,6 +58,11 @@
 
 </body>
 
+<script src="baseboard.js" ></script>
+<script src="baserobot.js" ></script>
+<script src="easyboard.js" ></script>
+<script src="robotrandom.js" ></script>
+<script src="robotminimax.js" ></script>
 <script src="mainview.js" ></script>
 
 </html>
