Fix bug in scoring

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>
         <label for="firstMove">Game starts:</label>
         <select name="firstMove" id="idFirstMove">
-          <option value="human">Human</option>
+          <option value="human" selected="true">Human</option>
           <option value="robot">Robot</option>
         </select>
       </p>
