Performance fixes and interface changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </select>
       </p>
       <p>
-        <label for="robotType">Robot type</label>
+        <label for="robotType">Robot type:</label>
         <select name="robotType" id="idRobotType">
           <option value="robotRandom">Random moves</option>
           <option value="robotMiniMax" selected="true">MiniMax</option>
