move js files into folders

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
  
 </body>
 
-<script src="baseboard.js" ></script>
-<script src="baserobot.js" ></script>
-<script src="easyboard.js" ></script>
-<script src="robotrandom.js" ></script>
-<script src="robotminimax.js" ></script>
+<script src="./board/baseboard.js" ></script>
+<script src="./robot/baserobot.js" ></script>
+<script src="./board/easyboard.js" ></script>
+<script src="./robot/robotrandom.js" ></script>
+<script src="./robot/robotminimax.js" ></script>
 <script src="mainview.js" ></script>
 
 </html>
