--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button onclick="onNewGameClick()" margin="20,20,0,20">Start new game</button>
     </div>
     <div class="board">
-      <table cellspacing="2" border="1" cellpadding="0" width="192" height="192" align="center">
+      <table cellspacing="2" border="1" cellpadding="0" width="192" height="192" align="center" id="idBoardTable">
         <tr>
           <td >
             <img id="00" onclick="onCellClick(0,0)"/>
@@ -78,6 +78,7 @@
 <script src="./board/baseboard.js" ></script>
 <script src="./robot/baserobot.js" ></script>
 <script src="./board/easyboard.js" ></script>
+<script src="./board/infinityboard.js"></script>
 <script src="./robot/robotrandom.js" ></script>
 <script src="./robot/robotminimax.js" ></script>
 <script src="mainview.js" ></script>
