--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <img id="22" src="./crossIcon.jpg"/>
             </div> 
         </div>
-        <div class="winner" id="idWinner">
+        <div class="winner">
             <h3 align="center">Winner</h3>
-            <h1 class="winner-label" id="idWinnerCaption"></h1>
+            <p id="idWinnerCaption" align="center"><p>
             <img id="idWinnerImage"/>
-          </div>
+        </div>
     </div>
 </body>
 
